[package]
name = "klib"
version = "0.1.0"
edition = "2024"
authors = ["Mads Hvid Byriel <madshbyriel@gmail.com>"]
description = "Klib"
license = "MIT"
repository = "https://github.com/madsbyriel/Klib"
homepage = "https://github.com/madsbyriel/Klib"
categories = []
readme = "README.md"

[dependencies]
evdev = { version = "0.13.2", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
