[package]
name = "kevlib"
version = "1.0.0"
edition = "2024"
authors = ["Mads Hvid Byriel <madshbyriel@gmail.com>"]
description = "Klib"
license = "MIT"
repository = "https://github.com/madsbyriel/kevlib"
homepage = "https://github.com/madsbyriel/kevlib"
categories = []
readme = "README.md"

[dependencies]
anyhow = "1.0.101"
evdev = { version = "0.13.2", features = ["tokio"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
